Cretae nedded view models with validation and create product and category service

--- a/OnlineShop.InputModels/OnlineShop.InputModels.csproj
+++ b/OnlineShop.InputModels/OnlineShop.InputModels.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnlineShop.Common\OnlineShop.Common.csproj" />
+    <ProjectReference Include="..\OnlineShop.Mappings\OnlineShop.Mappings.csproj" />
+    <ProjectReference Include="..\OnlineShop.Models\OnlineShop.Models.csproj" />
   </ItemGroup>
 
 </Project>
