--- a/OnlineShop.ViewModels/OnlineShop.ViewModels.csproj
+++ b/OnlineShop.ViewModels/OnlineShop.ViewModels.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineShop.Mappings\OnlineShop.Mappings.csproj" />
+    <ProjectReference Include="..\OnlineShop.Models\OnlineShop.Models.csproj" />
+  </ItemGroup>
+
 </Project>
