--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
-    "@angular/cdk": "^8.2.3",
+    "@angular/animations": "^8.2.14",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
-    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.5",
-    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.5",
+    "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "rxjs": "~6.4.0",
