some configurational changes

--- a/server/OnlineShop/appsettings.json
+++ b/server/OnlineShop/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-U6PER2I\\SQLEXPRESS;Database=OnlineShop;Trusted_Connection=True;"
+    "DefaultConnection": "Server=JUDGE\\SQLEXPRESS;Database=OnlineShop;Integrated Security=false;User ID=judgeRoot;Password=100yearspmg.r00t;MultipleActiveResultSets=true;"
   },
   "JwtSettings": {
     "Secret": "superSecretJsonWebTokenComesHere"
