--- a/server/OnlineShop/appsettings.Development.json
+++ b/server/OnlineShop/appsettings.Development.json
@@ -1,4 +1,10 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-U6PER2I\\SQLEXPRESS;Database=OnlineShop;Trusted_Connection=True;"
+  },
+  "JwtSettings": {
+    "Secret": "superSecretJsonWebTokenComesHere"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
